Improvements to documentation, dockerization and authentication
