# src/app/api/endpoints/dto/request/CollectionRequest.go
@@ -1,5 +1,5 @@
 package request
 
 type Collection struct {
-	Name string `json:"name" example:"Collection example"`
+	Name string `json:"name"`
 }
